# nfl-stats

./: pyproject.toml
.github/workflows/: branch-name-validation.yml  lint.yml  test.yml
scripts/: validate_branch_name.sh
src/nfl_stats/: __init__.py  __main__.py  _logger.py  _meta.py  _team.py
src/nfl_stats/_http/: __init__.py  _headers.py
src/nfl_stats/_http/config/: headers.json
src/nfl_stats/data/: team-abbreviations.json
tests/regression/: test_team.py
tests/unit/: test_http.py  test_meta.py  test_team.py
