[project]
name = "nfl-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Lee",email = "Jacob.J.Lee@outlook.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.1.1,<10.0.0)"
]
lint = [
    "vermin (>=1.8.0,<2.0.0)",
    "pylint (>=4.0.6,<5.0.0)"
]
