[project]
name = "nfl-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Lee",email = "Jacob.J.Lee@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "numpy (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.1.1,<10.0.0)"
]
lint = [
    "vermin (>=1.8.0,<2.0.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "pyright (>=1.1.411,<2.0.0)"
]
