[project]
name = "nfl-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Lee",email = "Jacob.J.Lee@outlook.com"}
]
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.1.1,<10.0.0)"
]
